test/libyul/yulSyntaxTests/objects/datasize_notfound.yul
object "A" {
  code {
    pop(datasize("C"))
  }
  data "B" ""
}
// ----
// TypeError 3517: (39-42='"C"'): Unknown data object "C".
